// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginHeader should render properly 1`] = `
<div>
  <div
    class="w-full bg-theme-background"
    data-testid="plugin-details__header"
  >
    <div
      class="flex w-full"
    >
      <div
        class="rounded-lg overflow-hidden w-40 h-full"
      >
        <svg>
          plugin-logo-placeholder.svg
        </svg>
      </div>
      <div
        class="flex flex-col justify-between space-y-3 pl-8 w-full"
      >
        <div
          class="flex justify-between items-center"
        >
          <div
            class="flex flex-col mr-2"
          >
            <span
              class="text-2xl font-bold"
            >
              Test Plugin
            </span>
            <span
              class="text-medium text-theme-secondary-500"
            />
          </div>
          <div
            class="flex"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 ePkfgQ"
              data-testid="PluginHeader__button--install"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Install
              </div>
            </button>
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV ml-3"
              data-testid="PluginHeader__button--warning"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  height="20"
                  width="20"
                >
                  <svg>
                    report.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          class="Divider-sc-19q4mlo-0 bKsVMa border-theme-secondary-300 dark:border-theme-secondary-800"
          type="horizontal"
        />
        <div
          class="flex space-4 justify-between"
        >
          <div
            class="flex space-x-4 text-sm divide-x divide-theme-secondary-300 border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="flex"
            >
              <div
                class="flex flex-col pr-6"
              >
                <span
                  class="font-bold text-theme-secondary-400"
                >
                  Author
                </span>
                <div
                  class="flex items-center"
                >
                  <span
                    class="font-bold text-theme-secondary-600"
                  >
                    ARK Ecosystem
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex px-6"
            >
              <div
                class="flex flex-col undefined"
              >
                <span
                  class="font-bold text-theme-secondary-400"
                >
                  Category
                </span>
                <span
                  class="font-bold text-theme-secondary-600"
                >
                  Utility
                </span>
              </div>
            </div>
            <div
              class="flex px-6"
            >
              <div
                class="flex flex-col"
              >
                <div
                  class="font-bold text-theme-secondary-400"
                >
                  URL
                </div>
                <a
                  class="font-bold text-theme-primary-600"
                  href="/"
                >
                  github.com
                </a>
              </div>
            </div>
          </div>
          <div
            class="flex space-x-4 text-sm divide-x divide-theme-secondary-300 border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="flex pl-6"
            >
              <div
                class="flex flex-col text-right"
                data-testid="PluginSpecs__version"
              >
                <span
                  class="font-bold text-theme-secondary-400"
                >
                  Version
                </span>
                <span
                  class="font-bold text-theme-secondary-600"
                >
                  1.3.8
                </span>
              </div>
            </div>
            <div
              class="flex pl-6"
            >
              <div
                class="flex flex-col text-right"
                data-testid="PluginSpecs__size"
              >
                <span
                  class="font-bold text-theme-secondary-400"
                >
                  Size
                </span>
                <span
                  class="font-bold text-theme-secondary-600"
                >
                  4.2 Mb
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PluginHeader should render with logo 1`] = `
<div>
  <div
    class="w-full bg-theme-background"
    data-testid="plugin-details__header"
  >
    <div
      class="flex w-full"
    >
      <div
        class="rounded-lg overflow-hidden w-40 h-full"
      >
        <img
          alt="Logo"
          class="rounded-lg w-full"
          data-testid="PluginCard__logo"
          src="https://ark.io/logo.png"
        />
      </div>
      <div
        class="flex flex-col justify-between space-y-3 pl-8 w-full"
      >
        <div
          class="flex justify-between items-center"
        >
          <div
            class="flex flex-col mr-2"
          >
            <span
              class="text-2xl font-bold"
            >
              Test Plugin
            </span>
            <span
              class="text-medium text-theme-secondary-500"
            />
          </div>
          <div
            class="flex"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 ePkfgQ"
              data-testid="PluginHeader__button--open"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Open
              </div>
            </button>
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV ml-3"
              data-testid="PluginHeader__button--warning"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                <div
                  class="sc-bdfBwQ iyevwF"
                  height="20"
                  width="20"
                >
                  <svg>
                    report.svg
                  </svg>
                </div>
              </div>
            </button>
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV ml-3"
              data-testid="PluginHeader__button--uninstall"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                <div
                  class="sc-bdfBwQ fPrsah"
                  height="1em"
                  width="1em"
                >
                  <svg>
                    trash.svg
                  </svg>
                </div>
              </div>
            </button>
          </div>
        </div>
        <div
          class="Divider-sc-19q4mlo-0 bKsVMa border-theme-secondary-300 dark:border-theme-secondary-800"
          type="horizontal"
        />
        <div
          class="flex space-4 justify-between"
        >
          <div
            class="flex space-x-4 text-sm divide-x divide-theme-secondary-300 border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="flex"
            >
              <div
                class="flex flex-col pr-6"
              >
                <span
                  class="font-bold text-theme-secondary-400"
                >
                  Author
                </span>
                <div
                  class="flex items-center"
                >
                  <span
                    class="font-bold text-theme-secondary-600"
                  >
                    ARK Ecosystem
                  </span>
                </div>
              </div>
            </div>
            <div
              class="flex px-6"
            >
              <div
                class="flex flex-col undefined"
              >
                <span
                  class="font-bold text-theme-secondary-400"
                >
                  Category
                </span>
                <span
                  class="font-bold text-theme-secondary-600"
                >
                  Utility
                </span>
              </div>
            </div>
            <div
              class="flex px-6"
            >
              <div
                class="flex flex-col"
              >
                <div
                  class="font-bold text-theme-secondary-400"
                >
                  URL
                </div>
                <a
                  class="font-bold text-theme-primary-600"
                  href="/"
                >
                  github.com
                </a>
              </div>
            </div>
          </div>
          <div
            class="flex space-x-4 text-sm divide-x divide-theme-secondary-300 border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="flex pl-6"
            >
              <div
                class="flex flex-col text-right"
                data-testid="PluginSpecs__version"
              >
                <span
                  class="font-bold text-theme-secondary-400"
                >
                  Version
                </span>
                <span
                  class="font-bold text-theme-secondary-600"
                >
                  1.3.8
                </span>
              </div>
            </div>
            <div
              class="flex pl-6"
            >
              <div
                class="flex flex-col text-right"
                data-testid="PluginSpecs__size"
              >
                <span
                  class="font-bold text-theme-secondary-400"
                >
                  Size
                </span>
                <span
                  class="font-bold text-theme-secondary-600"
                >
                  4.2 Mb
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
